COM-2598 Fixed Spacing Issue at seller side

--- a/stylesheets/modules/b2b-account/quotes.less
+++ b/stylesheets/modules/b2b-account/quotes.less
@@ -329,7 +329,7 @@
     height:29px;
     border:1px solid black;
     padding: 5.6px;
-    margin-left: 8%;
+    margin-left: 5%;
     background-color: #eee;
 }
 
@@ -340,3 +340,8 @@
         width: 80% !important;
         z-index: 9999 !important;
   }
+
+.mz-b2b-space   
+{
+    margin-left: 13%;    
+}
